@@ -8,6 +8,7 @@ MIT License (MIT) <http://www.opensource.org/licenses/MIT>
 Release 0.16
 
 * improved error handling while parsing XML files
+* added XML attribute ´set_order` in tag `dialog` enables the manual order of fieldsets
 
 Release 0.15 - 2012-07-03
 
